fix: prevent the colorful link gradient hover from sitting behind the lock icon

--- a/docroot/themes/humsci/humsci_basic/src/scss/tools/_mixins.general.scss
+++ b/docroot/themes/humsci/humsci_basic/src/scss/tools/_mixins.general.scss
@@ -161,7 +161,7 @@
 
 // Used for link typography mixins across all themes
 // both with and without icons
-@mixin hb-link-background-image($icon, $icon-width, $default-palette, $palette-array) {
+@mixin hb-link-background-image($icon, $icon-width, $icon-position, $default-palette, $palette-array) {
   // For links without an icon
   // Fallback for IE
   background-image: linear-gradient(to top, transparent 50%, hb-get-pairing-color('tertiary-highlight', $default-palette, $palette-array) 50%);
@@ -172,10 +172,19 @@
   // Changes the value passed into background-image to
   // create space for the external link space to exist
   @if $icon {
+    $gradient-direction: left;
+
+    // If the icon is positioned to the left of the link text we need the gradient
+    // to flow towards the opposite direction so that the transparent part sits
+    // behind the icon
+    @if ($icon-position == 'left') {
+      $gradient-direction: right;
+    }
+
     // Fallback for IE
-    background-image: linear-gradient(to left, transparent $icon-width, hb-get-pairing-color('tertiary-highlight', $default-palette, $palette-array) $icon-width);
+    background-image: linear-gradient(to $gradient-direction, transparent $icon-width, hb-get-pairing-color('tertiary-highlight', $default-palette, $palette-array) $icon-width);
 
     // Color Pairing Custom Variable
-    background-image: linear-gradient(to left, transparent $icon-width, var(--palette--tertiary-highlight) $icon-width);
+    background-image: linear-gradient(to $gradient-direction, transparent $icon-width, var(--palette--tertiary-highlight) $icon-width);
   }
 }
